# fastapi-lambda-test

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  serverless.yaml  setup.cfg  setup.py
api/: main.py
src/: calculations.py
utils/: create-lambda-layer.sh  update-requirements.sh
