# setup.cfg: a setuptools-based declarative configuration for myproj

[metadata]
name = myproj
version = 1.0.0
description = The myproj project
readme = README.md
python_requires = >=3.9
long_description = file: README.md
long_description_content_type = text/markdown
url = https://fastapi-test
project_urls =
    Issues = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
# Packages defined in setup.py
package_dir =
    = .
install_requires =
    # fastapi, used to create the API
    fastapi
    # mangum, used to convert fastapi to serverless lambda
    mangum
    # pydantic, used for data modelling and data validation
    pydantic

[options.extras_require]
dev =
    # bandit, used for checks of common Python security problems.
    bandit
    # black, used for code styling
    black
    # flake8, used for code formatting
    flake8
    # isort, used for standardizing the order of imports.
    isort
    # MYPY, used for type checking.
    mypy
    # pre-commit, used for running pre-commit scripts
    pre-commit
    # Pytest, used for testing.
    pytest
    # Pytest-Cov, a code coverage plugin for Pytest.
    pytest-cov
    # uvicorn, used to run fastapi server locally
    uvicorn
